# landau-poisson-solver

./: .gitignore  .travis.yml  LP_ompi.cpp  LP_ompi_1.cpp  LP_ompi_2.cpp  LPsolver-input.txt  Makefile.am  SetInit_1.cpp  advection_1.cpp  bootstrap  clean_bootstrap  collisionRoutines_1.cpp  configure.ac  conservationRoutines.cpp  jobscript.sh  makefile  makefile.orig  makefile_mkl
m4/: acx_mkl.m4  acx_scalapack.m4  ax_compiler_vendor.m4  ax_cxx_compile_stdcxx.m4  ax_cxx_compile_stdcxx_11.m4  ax_grvy.m4  config_environment.m4  config_summary.m4  coverage.m4
source/: EntropyCalculations.cpp  EntropyCalculations.h  EquilibriumSolution.cpp  EquilibriumSolution.h  FieldCalculations.cpp  FieldCalculations.h  FieldCalculations_withND.cpp  InputParsing.cpp  InputParsing.h  LP_ompi.cpp  LP_ompi.h  Makefile.am  MarginalCreation.cpp  MarginalCreation.h  MomentCalculations.cpp  MomentCalculations.h  NegativityChecks.cpp  NegativityChecks.h  SetInit_1.cpp  SetInit_1.h  advection_1.cpp  advection_1.h  collisionRoutines_1.cpp  collisionRoutines_1.h  conservationRoutines.cpp  conservationRoutines.h  conservationRoutines_OnlyMass.cpp  scalapack.h
tests/: LPsolver-input-Test0.txt  LPsolver-input-test0.txt  LPsolver-input-test1.txt  LPsolver-input-test2.txt  LPsolver-input-test3.txt  LPsolver-input-test5.txt  LPsolver-input-test6.txt  LPsolver_tests  Makefile.am  Moments_Test0.dc  Moments_Test1.dc  Moments_Test2.dc  Moments_Test3.dc  Moments_Test4.dc  Moments_Test5.dc  Moments_Test6.dc  moment_differ.sh  success.sh  test0.sh  test1
tests/Data/: EntropyVals_nu0.05A0.2k0.5Nx16Lx12.5664Nv16Lv5.25SpectralN8dt0.01nT10_Test0.dc  FieldVals_nu0.05A0.2k0.5Nx16Lx12.5664Nv16Lv5.25SpectralN8dt0.01nT10_Test0.dc  Marginals_nu0.05A0.2k0.5Nx16Lx12.5664Nv16Lv5.25SpectralN8dt0.01nT10_Test0.dc  Moments_nu0.05A0.2k0.5Nx16Lx12.5664Nv16Lv5.25SpectralN8dt0.01nT10_Test0.dc  PhiVals_nu0.05A0.2k0.5Nx16Lx12.5664Nv16Lv5.25SpectralN8dt0.01nT10_Test0.dc  U_nu0.05A0.2k0.5Nx16Lx12.5664Nv16Lv5.25SpectralN8dt0.01nT10_Test0.dc
